--- a/app/src/main/res/layout/activity_write_positive.xml
+++ b/app/src/main/res/layout/activity_write_positive.xml
@@ -14,18 +14,25 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"/>
+        android:layout_marginTop="16dp"
+        android:textStyle="bold"
+        android:textSize="20sp"/>
 
     <Button
         android:id="@+id/btn_save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="保存"
-        android:layout_marginTop="6dp"
+        android:layout_marginTop="16dp"
         android:onClick="onSaveButtonClick"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="16dp" />
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/green_square_button"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:backgroundTint="@null"/>
 
     <Spinner
         android:id="@+id/positiveEventSpinner1"
